[package]
name = "blkid"
version = "0.2.1"
description = "Safe blkid-sys wrapper"
documentation = "https://docs.rs/blkid"
repository = "https://github.com/cholcombe973/blkid"
license = "MIT"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
categories = ["api-bindings"]

[dependencies]
blkid-sys = { git = "https://github.com/elastio/blkid-sys", branch = "update-bindgen-version" }
errno = "^0.2"
libc = "0.2.77"
